# L-Mnemo3

./: .gitignore  LOG.md  PRD.md  README.md  additional_instructions.md  api.py  cli.py  config.py  pyproject.toml  requirements.txt
@Docs/: Gitignore-Setup.md
Docs/: MemoryPeg-Connection-Fix.md
FRONTEND/: PRD.md  README.md  next.config.ts  package-lock.json  package.json
FRONTEND/app/: layout.tsx  page.tsx
FRONTEND/app/api/llm/: route.ts
FRONTEND/components/layout/: BottomToolbar.tsx  CenterWorkspace.tsx  LeftSidebar.tsx  RightSidebar.tsx
FRONTEND/components/providers/: QueryProvider.tsx
FRONTEND/hooks/: useMemoryPeg.ts  useQuadrantTimer.ts  useSubmission.ts
FRONTEND/services/: LLMService.ts  MemoryPegService.ts  SubmissionService.ts
FRONTEND/store/: useAppStore.ts
FRONTEND/types/: index.ts
mnemo/artifacts/: build_raw_artifact.py
mnemo/capture/: screenshot_capture.py
mnemo/db/: sqlite.py
mnemo/derivatives/: process_derivatives.py
mnemo/ingestion/: process_screenshots.py
mnemo/llm/: ollama_client.py
mnemo/memory_peg/: memory_peg_client.py
tests/: test_db.py
