[project]
name = "l-mnemo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
mnemo = "cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
